fix design topik

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,17 +6,41 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar .pre-scrollable">
 
-            <div class="row">
-                <div class="span4 collapse-group">
-                    <h2>Rooms</h2>
-                    <p class="collapse">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                    <ul>
-                        <li>
-                        </li>
-                    </ul>
+                <div class="panel-group" id="accordion">
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse-1">Nama room</a>
+                            </h4>
+                        </div>
+                        <div id="collapse-1" class="panel-collapse collapse">
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                        </div>
+                    </div>
+
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse-2">Nama room 2</a>
+                            </h4>
+                        </div>
+                        <div id="collapse-2" class="panel-collapse collapse">
+                            <li><a href="#">Topike  </a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                            <li><a href="#">Topike</a></li>
+                        </div>
+                        </div>
+                    </div>
+
                 </div>
-            </div>
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main .pre-scrollable">
