--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="../css/vendors/bootstrap.min.css">
     <link rel="stylesheet" href="../css/sign_in.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/vendors/jquery-2.1.1.min.js"></script>
+    <script src="../js/vendors/bootstrap/js/bootstrap.min.js"></script>
     <script src="../js/vendors/angular/angular.js"></script>
     <script src="../js/vendors/angular/angular-route.js"></script>
+    <script src="../js/vendors/angular/angular-cookies.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/controllers.js"></script>
 </head>
