--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,13 +15,12 @@
                             </h4>
                         </div>
                         <div id="collapse-1" class="panel-collapse collapse">
-                            <ul>
+                            <ul class="nav ">
+                                <li><a class="active" href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
-                                <li><a href="#">Topike</a></li>
-                                <li><a href="#">Topike</a></li>
-                             </ul>
+                            </ul>
                         </div>
                     </div>
 
@@ -33,9 +32,8 @@
                             </h4>
                         </div>
                         <div id="collapse-2" class="panel-collapse collapse">
-                            <ul>
-                                <li><a href="#">Topike</a></li>
-                                <li><a href="#">Topike</a></li>
+                            <ul class="nav ">
+                                <li><a class="active" href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
                                 <li><a href="#">Topike</a></li>
