--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html ng-app="qischat" ng-csp>
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
     <script src="../js/vendors/angular/angular-route.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/controllers.js"></script>
+    <script src="../js/apiservice.js"></script>
 </head>
 <body>
 
